# memory-game

./: CMakeLists.txt  _clipboard.txt  issues.txt
assets/: cards.pdn  settings.json  settings.lua
src/: Deck.c  Deck.h  Font.c  Font.h  Lua.c  Lua.h  Widgets.c  Widgets.h  event.c  event.h  globals.c  globals.h  main.c  utils.c  utils.h
